{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 49,
  "lineage": "a8dafb2d-4b69-aca4-c353-7203465ed876",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:975050007786:instance/i-05c0b7af03681315b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c0b7af03681315b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03238147f043d8a5b",
            "private_dns": "ip-172-31-21-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.226",
            "public_dns": "ec2-107-20-2-97.compute-1.amazonaws.com",
            "public_ip": "107.20.2.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5b02b5bc9ac57f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "Terraform_Firewall",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01173768ba2d814c2",
            "tags": {
              "Name": "MyEC2"
            },
            "tags_all": {
              "Name": "MyEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0a2114da90995b3",
              "sg-0dfc2ab2b44599a8f"
            ]
          },
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group/sg-0dfc2ab2b44599a8f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dfc2ab2b44599a8f",
            "ingress": [],
            "name": "Terraform_Firewall",
            "name_prefix": "",
            "owner_id": "975050007786",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e1f27af662e5d82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-0e491376f34ad5db4",
            "cidr_ipv4": "101.0.62.210/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0e491376f34ad5db4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfc2ab2b44599a8f",
            "security_group_rule_id": "sgr-0e491376f34ad5db4",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-0f223292c935c2def",
            "cidr_ipv4": "101.0.62.210/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0f223292c935c2def",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfc2ab2b44599a8f",
            "security_group_rule_id": "sgr-0f223292c935c2def",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "shh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-070646b859a86e574",
            "cidr_ipv4": "101.0.62.210/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-070646b859a86e574",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfc2ab2b44599a8f",
            "security_group_rule_id": "sgr-070646b859a86e574",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    }
  ]
}